--- a/leetcode/数组/中级-数组.md
+++ b/leetcode/数组/中级-数组.md
@@ -1,80 +1,124 @@
-
-- [15. 3Sum [Medium]](#15-3sum-medium)
-- [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
-- [380. 常数时间插入/删除/随机取数组元素 [Medium]](#380-常数时间插入删除随机取数组元素-medium)
-- [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
-- [240. 搜索二维矩阵 II [Medium]](#240-搜索二维矩阵-ii-medium)
-- [74. 搜索二维矩阵 I [Medium]](#74-搜索二维矩阵-i-medium)
-- [54. 螺旋数组](#54-螺旋数组)
-- [59. 螺旋矩阵 II](#59-螺旋矩阵-ii)
-- [718. 最长重复子数组](#718-最长重复子数组)
-- [209. 长度最小的子数组](#209-长度最小的子数组)
-- [31. 下一个排列 [Medium]](#31-下一个排列-medium)
-- [293. 滑动窗口最大值 [Hard] *](#293-滑动窗口最大值-hard-)
-- [41.缺失的第一个正数](#41缺失的第一个正数)
-- [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
+- [进阶](#进阶)
+  - [31. 下一个排列 [Medium]](#31-下一个排列-medium)
+  - [41.缺失的第一个正数](#41缺失的第一个正数)
+  - [42. 接雨水 [Hard] [*]](#42-接雨水-hard-)
+  - [73. 矩阵置零  [Medium]](#73-矩阵置零--medium)
+- [滑动窗口解题技巧](#滑动窗口解题技巧)
+  - [718. 最长重复子数组](#718-最长重复子数组)
+  - [209. 长度最小的子数组](#209-长度最小的子数组)
+  - [293. 滑动窗口最大值 [Hard] *](#293-滑动窗口最大值-hard-)
+  - [76. 最小覆盖子串 [Hard] * [字节/百度]](#76-最小覆盖子串-hard--字节百度)
+  - [128. 最长连续序列 [字节*]](#128-最长连续序列-字节)
+  - [补充题：最多覆盖点问题 [百度/美团 *]](#补充题最多覆盖点问题-百度美团-)
 
 
-### 15. 3Sum [Medium]
-- 从无序数组中找出三个非重复元素和等于目标值
-- TwoSum的升级
-- 可以通过多次TwoSum查找来实现3Sum的计算
-    - 为了避免重复，需要在遍历时跳过重复区域
-    - 外层循环和内层循环都需要进行重复区域的跳过
-- 时间复杂度 `O(N^2)` 空间复杂度 O(logN) 排序所需
+## 进阶
+### 31. 下一个排列 [Medium]
+
+- 算法需要将给定数字序列重新排列成字典序中下一个更大的排列。如果不存在下一个更大的排列，则将数字重新排列成最小的排列
+> 我们希望下一个数比当前数大，这样才满足“下一个排列”的定义。因此只需要将后面的「大数」与前面的「小数」交换，就能得到一个更大的数。比如 123456，将 5 和 6 交换就能得到一个更大的数 123465
+
+> 还希望**下一个数增加的幅度尽可能的小**，这样才满足“下一个排列与当前排列紧邻“的要求。为了满足这个要求:
+
+1. 在尽可能靠右的低位进行交换，需要从后向前查找
+2. 将一个 尽可能小的「大数」 与前面的「小数」交换。比如 123465，下一个排列应该把 5 和 4 交换而不是把 6 和 4 交换
+3. 将「大数」换到前面后，**需要将「大数」后面的所有数重置为升序，升序排列就是最小的排列**。以 123465 为例：首先按照上一步，交换 5 和 4，得到 123564；然后需要将 5 之后的数重置为升序，得到 123546。显然 123546 比 123564 更小，123546 就是 123465 的下一个排列
+
+- 关键两个步骤： 低位交换 和 后序序列的翻转
+  - 低位交换： 找到相邻的< 组合， 
 ```
 class Solution {
 public:
-    vector<vector<int>> ans;
-    void twoSum(vector<int>& nums, int target, int index) {
-        int left = index + 1;
-        int right = nums.size() - 1;
-        while(left < right) {
-            if (nums[left] + nums[right] == target) {
-                if (left != index && right != index) {
-                    ans.push_back({nums[index], nums[left], nums[right]});
-                    //cout << nums[index] <<" " <<nums[left] << " "<< nums[right] << endl;
-                }
-                int cur = nums[left];
-                while(left < nums.size() && nums[left]==cur) {
-                    left++;
-                }
-                //cout << "move:" << left << " " << nums[left]<< endl;
-                int curr = nums[right];
-                while(right >= 0 && nums[right]==curr) {
-                    right--;
-                }
-                //cout << "right:" << right << " " << nums[right]<< endl;
-                continue;
-                //left++;
+    void nextPermutation(vector<int>& nums) {
+        int length = nums.size();
+        if (length <= 1)
+            return;
+        int p1 = length - 2;
+        int p2 = length - 1;
+        int tmp = length - 1;
+        // 寻找低位
+        while (p1 >= 0 && nums[p1] >= nums[p1 + 1]) {
+            p1--;
+        }
+        // 后序元素跟低位进行交换
+        if (p1 >= 0) {
+            // 寻找后面第一个大于 低位的元素
+            while (tmp >= 0 && nums[p1] >= nums[tmp]) {
+                tmp--;
             }
-            else if(nums[left] + nums[right] < target) {
-                left++;
+            swap(nums[tmp], nums[p1]);
+        }
+        // 翻转后面的序列
+        reverse(nums.begin() + p1 + 1, nums.end());
+    }
+};
+```
+
+
+### 41.缺失的第一个正数
+> 给你一个未排序的整数数组 nums ，请你找出其中没有出现的最小的正整数。
+
+- 数组的正整数范围在[1, n];
+- 可以将目前数组nums中在上述范围上的数字移动到对应位置： nums[i] = i + 1;
+  - **细节是魔鬼** 要连续移动至 nums[i] = nums[nums[i] - 1]， 避免单次移动出现遗漏
+  - 之后遍历数组返回第一个`nums[i]!= i + 1`的情况
+- 时间复杂度 O(N) 空间复杂度O(1)
+   
+```
+class Solution {
+public:
+    int firstMissingPositive(vector<int>& nums) {
+        int n = nums.size();
+        for (int i = 0; i < n; i++) {
+            // 连续移动， 避免被移动到遍历过的位置的数字存在合理
+            while (nums[i] >= 1 && nums[i] <= n && nums[i] != nums[nums[i] - 1]) {
+                swap(nums[i], nums[nums[i] - 1]);
             }
-            else {
+        }
+        for (int i = 0; i < n ; i++) {
+            if (nums[i] != i + 1)
+                return i + 1;
+        }
+        cout << n <<endl;
+        return n + 1;
+    }
+};
+```
+
+### 42. 接雨水 [Hard] [*]
+- 当前位置的盛水量取决于左侧/右侧相对最高位置的比较情况
+- 使用双指针法，每次更新左/右当前的最高位置，取最低位置计算结果
+  - 本质上将，当前位置的接水量取决于当前位置左右的最高点
+  - 双指针法简化了重复求每个位置左右最高点的计算过程
+- 时间复杂度 O(N)
+- 关键点 **`单调栈`**
+
+```
+class Solution {
+public:
+    int trap(vector<int>& height) {
+        int l_max = 0;
+        int r_max = 0;
+        int left = 0;
+        int right = height.size() - 1;
+        int ans = 0;
+        while (left <= right) {
+            l_max = max(l_max, height[left]);
+            r_max = max(r_max, height[right]);
+            if (r_max < l_max) {
+                ans += (r_max - height[right]);
                 right--;
             }
-        }
-    }
-    vector<vector<int>> threeSum(vector<int>& nums) {
-        if (nums.size() < 3) {
-            return ans;
-        }
-        sort(nums.begin(), nums.end()); //排序
-        int i = 0;
-        while (i < nums.size()) {
-            if (nums[i] > 0)
-                break;
-            twoSum(nums, -nums[i], i);
-            int cur = nums[i];
-            while(i < nums.size() && nums[i]==cur) {
-                    i++;
+            else {
+                ans += (l_max - height[left]);
+                left++;
             }
         }
         return ans;
     }
 };
 ```
+
 ### 73. 矩阵置零  [Medium] 
 - 遍历
 ```
@@ -103,221 +147,8 @@ public:
 };
 ```
 
-### 380. 常数时间插入/删除/随机取数组元素 [Medium]
-- 哈希表+动态数组实现
-- 删除： 将尾部元素与当前要删除的元素进行交互，然后再删除尾部数组，实现常量级的删除操作
-  
-```
-class RandomizedSet {
-public:
-    unordered_map<int, int> indexs;
-    vector<int> ans;
 
-    /** Initialize your data structure here. */
-    RandomizedSet() {
-
-    }
-    
-    /** Inserts a value to the set. Returns true if the set did not already contain the specified element. */
-    bool insert(int val) {
-        //cout << "insert" << endl;
-        if (indexs.count(val)) {
-            return false;
-        }
-        ans.push_back(val);
-        indexs[val] = ans.size() - 1;
-        return true;
-
-    }
-    
-    /** Removes a value from the set. Returns true if the set contained the specified element. */
-    bool remove(int val) {
-        //cout << "remove" << endl;
-        if (indexs.count(val)) {
-           // cout << "remove2" << endl;
-            
-            
-            int pos = indexs[val];
-            indexs.erase(val);
-            if (pos == ans.size() - 1){
-                ans.pop_back();
-                return true;
-            }
-            ans[pos] = ans.back();
-            indexs[ans.back()] = pos;
-            ans.pop_back();
-            
-            return true;
-        }
-        return false;
-    }
-    
-    /** Get a random element from the set. */
-    int getRandom() {
-        //cout << "Random" << endl;
-        return ans[rand() % ans.size()];
-    }
-};
-```
-
-### 42. 接雨水 [Hard] [*]
-- 当前位置的盛水量取决于左侧/右侧相对最高位置的比较情况
-- 使用双指针法，每次更新左/右当前的最高位置，取最低位置计算结果
-  - 本质上将，当前位置的接水量取决于当前位置左右的最高点
-  - 双指针法简化了重复求每个位置左右最高点的计算过程
-- 时间复杂度 O(N)
-
-```
-class Solution {
-public:
-    int trap(vector<int>& height) {
-        int l_max = 0;
-        int r_max = 0;
-        int left = 0;
-        int right = height.size() - 1;
-        int ans = 0;
-        while (left <= right) {
-            l_max = max(l_max, height[left]);
-            r_max = max(r_max, height[right]);
-            if (r_max < l_max) {
-                ans += (r_max - height[right]);
-                right--;
-            }
-            else {
-                ans += (l_max - height[left]);
-                left++;
-            }
-        }
-        return ans;
-    }
-};
-```
-
-
-### 240. 搜索二维矩阵 II [Medium]
-> 每行的元素从左到右升序排列。 每列的元素从上到下升序排列。
-- 二分查找法：
-  - 在对角线开始向下和向右的搜索
-
-```
-class Solution {
-public:
-    int rows = 0;
-    int cols = 0;
-    bool binarySearch(vector<vector<int>>& matrix, int target, int row) {
-        //cout << "binarySearch" << endl;
-        int left = row;
-        int right = rows - 1;
-        int col = row;
-        while (left <= right) {
-            //cout <<"l : " << left << " r :" << right << endl; 
-            int mid = left + (right - left)/2;
-            if (matrix[mid][col] == target) 
-                return true;
-            else if (matrix[mid][col] < target) {
-                left = mid + 1;
-            }
-            else if (matrix[mid][col] > target) {
-                right = mid - 1;
-            }
-        }
-        int low = row;
-        int high = cols - 1;
-        while (low <= high) {
-            //cout <<"low : " << low << " high :" << high << endl;
-            int mid = low + (high - low)/2;
-            if (matrix[row][mid] == target) 
-                return true;
-            else if (matrix[row][mid] < target) {
-                low = mid + 1;
-            }
-            else if (matrix[row][mid] > target) {
-                 high = mid - 1;
-            }
-        }
-        return false;
-    }
-    bool searchMatrix(vector<vector<int>>& matrix, int target) {
-        rows = matrix.size();
-        cols = matrix[0].size();
-        for (int i = 0; i < min(rows,cols); i ++) {
-            if (binarySearch(matrix, target, i))
-                return true;
-        }
-        return false;
-    }
-};
-```
-- **进阶做法**： 由于行和列都是有序的，可以将这个矩阵看作是一个搜索二叉树，
-  - **将左下角元素作为根节点，向上都是小于根节点的元素，向右都是大于根节点的元素**
-- 时间复杂度：`O(m+n)`
-```
-class Solution {
-public:
-
-    bool searchMatrix(vector<vector<int>>& matrix, int target) {
-        int row = matrix.size() - 1;
-        int col = 0;
-        while(row >=0 && col < matrix[0].size()) {
-            if (matrix[row][col] == target) 
-                return true;
-            else if (matrix[row][col] > target) {
-                row--; // 向小的方向移动
-            }
-            else if (matrix[row][col] < target) {
-                col++;
-            }
-        }
-        return false;
-    }
-};
-```
-
-###  74. 搜索二维矩阵 I [Medium]
-> 每行中的整数从左到右按升序排列。每行的第一个整数大于前一行的最后一个整数
-- 二分查找的利用
-  - 先搜第一列，找出小于目标值的第一行，然后再在行内进行二分查找
-  - 时间复杂度： `O(logm + logn)`
-```
-class Solution {
-public:
-    bool searchMatrix(vector<vector<int>>& matrix, int target) {
-        int low = 0;
-        int row = 0;
-        int high = matrix.size() - 1;
-        while(low <= high) {
-            int mid = low + (high - low) / 2;
-            if (matrix[mid][0] ==  target) 
-                return true;
-            else if (matrix[mid][0] < target) {
-                row = mid;
-                low = mid + 1;
-            }
-            else {
-                high = mid - 1;
-            }
-        }
-        //cout << row << endl;
-        if (matrix[row][0] > target || matrix[row].back() < target) 
-            return false;
-        int left = 0;
-        int right = matrix[row].size() - 1;
-        while (left <= right) {
-            int mid = left + (right - left) / 2;
-            if (matrix[row][mid] ==  target) 
-                return true;
-            else if (matrix[row][mid] < target) {
-                left = mid + 1;
-            }
-            else {
-                right = mid - 1;
-            }
-        }
-        return false;
-    }
-};
-```
-
+## 滑动窗口解题技巧
 
 ### 718. 最长重复子数组
 > 给两个整数数组 A 和 B ，返回两个数组中公共的、长度最长的子数组的长度。
@@ -473,46 +304,6 @@ public:
 };
 ```
 
-### 31. 下一个排列 [Medium]
-
-- 算法需要将给定数字序列重新排列成字典序中下一个更大的排列。如果不存在下一个更大的排列，则将数字重新排列成最小的排列
-> 我们希望下一个数比当前数大，这样才满足“下一个排列”的定义。因此只需要将后面的「大数」与前面的「小数」交换，就能得到一个更大的数。比如 123456，将 5 和 6 交换就能得到一个更大的数 123465
-
-> 还希望**下一个数增加的幅度尽可能的小**，这样才满足“下一个排列与当前排列紧邻“的要求。为了满足这个要求:
-
-1. 在尽可能靠右的低位进行交换，需要从后向前查找
-2. 将一个 尽可能小的「大数」 与前面的「小数」交换。比如 123465，下一个排列应该把 5 和 4 交换而不是把 6 和 4 交换
-3. 将「大数」换到前面后，**需要将「大数」后面的所有数重置为升序，升序排列就是最小的排列**。以 123465 为例：首先按照上一步，交换 5 和 4，得到 123564；然后需要将 5 之后的数重置为升序，得到 123546。显然 123546 比 123564 更小，123546 就是 123465 的下一个排列
-
-- 关键两个步骤： 低位交换 和 后序序列的翻转
-  - 低位交换： 找到相邻的< 组合， 
-```
-class Solution {
-public:
-    void nextPermutation(vector<int>& nums) {
-        int length = nums.size();
-        if (length <= 1)
-            return;
-        int p1 = length - 2;
-        int p2 = length - 1;
-        int tmp = length - 1;
-        // 寻找低位
-        while (p1 >= 0 && nums[p1] >= nums[p1 + 1]) {
-            p1--;
-        }
-        // 后序元素跟低位进行交换
-        if (p1 >= 0) {
-            // 寻找后面第一个大于 低位的元素
-            while (tmp >= 0 && nums[p1] >= nums[tmp]) {
-                tmp--;
-            }
-            swap(nums[tmp], nums[p1]);
-        }
-        // 翻转后面的序列
-        reverse(nums.begin() + p1 + 1, nums.end());
-    }
-};
-```
 
 ### 293. 滑动窗口最大值 [Hard] *
 > 一个整数数组 nums，有一个大小为 k 的滑动窗口从数组的最左侧移动到数组的最右侧。你只可以看到在滑动窗口内的 k 个数字。滑动窗口每次只向右移动一位，求每个窗口的最大值
@@ -556,35 +347,7 @@ public:
 };
 ```
 
-###  41.缺失的第一个正数
-> 给你一个未排序的整数数组 nums ，请你找出其中没有出现的最小的正整数。
 
-- 数组的正整数范围在[1, n];
-- 可以将目前数组nums中在上述范围上的数字移动到对应位置： nums[i] = i + 1;
-  - **细节是魔鬼** 要连续移动至 nums[i] = nums[nums[i] - 1]， 避免单次移动出现遗漏
-  - 之后遍历数组返回第一个`nums[i]!= i + 1`的情况
-- 时间复杂度 O(N) 空间复杂度O(1)
-   
-```
-class Solution {
-public:
-    int firstMissingPositive(vector<int>& nums) {
-        int n = nums.size();
-        for (int i = 0; i < n; i++) {
-            // 连续移动， 避免被移动到遍历过的位置的数字存在合理
-            while (nums[i] >= 1 && nums[i] <= n && nums[i] != nums[nums[i] - 1]) {
-                swap(nums[i], nums[nums[i] - 1]);
-            }
-        }
-        for (int i = 0; i < n ; i++) {
-            if (nums[i] != i + 1)
-                return i + 1;
-        }
-        cout << n <<endl;
-        return n + 1;
-    }
-};
-```
 
 ### 76. 最小覆盖子串 [Hard] * [字节/百度]
 > 一个字符串 s 、一个字符串 t 。返回 s 中涵盖 t 所有字符的最小子串。如果 s 中不存在涵盖 t 所有字符的子串，则返回空字符串 ""
@@ -687,4 +450,37 @@ public:
         return ans;
     }
 };
+```
+
+### 补充题：最多覆盖点问题 [百度/美团 *]
+
+> 数轴上从左到右有n个点a[0],a[1]…,a[n-1]，给定一根长度为L的绳子，求绳子最多能覆盖其中的几个点。要求算法复杂度为o(n)， 空间复杂度为O(1)
+
+- 双指针法，滑窗进行
+- 当**当前窗口长度大于最大长度时**，更新结果 `right - left`， 并移动左指针； 否则移动右指针
+
+```
+长度： 3 ； 6个数字
+3 6
+1 2 5 6 8 9
+```
+
+```
+int maxPoints(vector<int>& nums, int len) {
+    int ans = 0;
+    int left = 0;
+    int right = 0;
+    while (right < nums.size()) {
+        if ( (nums[right] - nums[left]) > len) {
+            ans = max(ans, right - left);
+            left++;
+        }
+        else {
+            right++;
+        }
+        //cout << "l : " << left << " r :" << right << " " << ans << endl;
+    }
+    cout << ans << endl;
+    return ans;
+}
 ```
