--- a/leetcode/数组/数组-初级.md
+++ b/leetcode/数组/数组-初级.md
@@ -1,12 +1,247 @@
-- Leetcode- 数组初级练习
-[TOC]
-### 前言
-主要掌握初级的数组问题操作：
-- 数组基本操作：增删改 (双指针)
-- 数组遍历优化：哈希表
+- [遍历问题](#遍历问题)
+  - [54. 螺旋数组](#54-螺旋数组)
+  - [59. 螺旋矩阵 II](#59-螺旋矩阵-ii)
+  - [66.加一](#66加一)
+  - [498. 对角线遍历](#498-对角线遍历)
+- [旋转问题](#旋转问题)
+    - [48.旋转图像](#48旋转图像)
+  - [189. 旋转数组](#189-旋转数组)
+- [位运算技巧](#位运算技巧)
+  - [136. 只出现一次的数字](#136-只出现一次的数字)
+  - [137. 只出现过一次的数字](#137-只出现过一次的数字)
+  - [260. 只出现过一次的数字 II](#260-只出现过一次的数字-ii)
+- [双指针技巧](#双指针技巧)
+  - [75. 颜色分类 [Medium]](#75-颜色分类-medium)
+  - [剑指21. 调整数组顺序使奇数位于偶数前面](#剑指21-调整数组顺序使奇数位于偶数前面)
+  - [283. 移动零](#283-移动零)
+  - [15. 3Sum [Medium]](#15-3sum-medium)
+  - [88. 合并两个有序数组](#88-合并两个有序数组)
+  - [350. 两个数组的交集2](#350-两个数组的交集2)
+- [哈希表技巧](#哈希表技巧)
+  - [1. 两数之和](#1-两数之和)
+  - [36. 有效的数独](#36-有效的数独)
+  - [380. 常数时间插入/删除/随机取数组元素 [Medium]](#380-常数时间插入删除随机取数组元素-medium)
+- [搜索问题](#搜索问题)
+  - [240. 搜索二维矩阵 II [Medium]](#240-搜索二维矩阵-ii-medium)
+  - [74. 搜索二维矩阵 I [Medium]](#74-搜索二维矩阵-i-medium)
 
-#### 旋转数组问题：
-【数组平移：环形移动解法】
+
+## 遍历问题
+- 常考察对二维数组的不同形式的遍历
+### 54. 螺旋数组
+- 螺旋遍历二维数组
+  - 循环终止条件：**还有剩余的元素未遍历**
+  - **设置4个index 索引来进行**
+```
+class Solution {
+public:
+    vector<int> spiralOrder(vector<vector<int>>& matrix) {
+        int row_l = 0;
+        int row_r = matrix.size() - 1;
+        int col_l = 0;
+        int col_r = matrix[0].size() - 1;
+        vector<int> ans;
+        int nums = matrix.size()* matrix[0].size();
+        while (nums >= 1) {
+            for (int i = col_l; i <= col_r && nums; i++) {
+                ans.push_back(matrix[row_l][i]);
+                nums--;
+            }
+            row_l++;
+           
+            for (int i = row_l; i <= row_r && nums; i++) {
+                ans.push_back(matrix[i][col_r]);
+                nums--;
+            }
+            cout << endl;
+            col_r--;
+            for (int i = col_r; i >= col_l && nums; i--) {
+                ans.push_back(matrix[row_r][i]);
+                nums--;
+                //cout << matrix[row_r][i] << " ";
+            }
+            row_r--;
+            for (int i = row_r; i >= row_l && nums; i--) {
+                ans.push_back(matrix[i][col_l]);
+                nums--;
+                //cout << matrix[i][col_l] << " ";
+            }
+            col_l++;
+        }
+        return ans;
+    }
+};
+```
+### 59. 螺旋矩阵 II
+> 给你一个正整数n，生成一个包含 1 到 n^2 所有元素，且元素按顺时针顺序螺旋排列的 n x n 正方形矩阵matrix
+
+- n^2个数字构成正方形，**顺时针遍历**
+  - 循环终止条件 **num < n*n**
+  - 与54题操作一致
+```
+class Solution {
+public:
+    vector<vector<int>> generateMatrix(int n) {
+        vector<vector<int>> target(n, vector<int>(n));
+        int row_l = 0;
+        int row_r = n - 1;
+        int col_l = 0;
+        int col_r = n - 1;
+        int num = 0;
+        n = n * n;
+        while(num < n) {
+            for (int i = col_l; i <= col_r && num < n; i++) {
+                target[row_l][i] = num + 1;
+                num++;
+            }
+            row_l ++;
+            for (int i = row_l; i <= row_r && num < n; i++) {
+                target[i][col_r] = num + 1;
+                num++;
+            }
+            col_r--;
+            for (int i = col_r; i >= col_l && num < n; i--) {
+                target[row_r][i] = num + 1;
+                num++;
+            }
+            row_r--;
+            for (int i = row_r; i >= row_l && num < n; i--) {
+                target[i][col_l] = num + 1;
+                num++;
+            }
+            col_l++;
+        }
+        return target;
+    }
+};
+```
+
+### 66.加一
+https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2cv1c/
+
+- 数组遍历+1；对于临界情况进行额外考虑，即头部需要插入新元素
+    复杂度分析： 时间复杂度O(m) 插入复杂度O(1)(vector insert)
+```
+class Solution {
+public:
+    vector<int> plusOne(vector<int>& digits) {
+        bool next=false;
+        for(int i=digits.size()-1;i>=0;i--){
+            digits[i]++;
+            if (digits[i]==10){
+                digits[i]=0;
+                next=true;
+            }else{
+                next=false;
+                break;
+            }
+        }
+        if(next){
+            digits.insert(digits.begin(),1);
+        }
+        return digits;
+    }
+};
+```
+
+### 498. 对角线遍历 
+> 给定一个含有 M x N 个元素的矩阵（M 行，N 列），请以对角线遍历的顺序返回这个矩阵中的所有元素
+
+- 与螺旋矩阵遍历有相似之处，都在考察对数组和矩阵的基本操作逻辑
+- 对角线遍历方式： **即保持： （x+y = k） 控制x 和 y 不超过合法范围即可**
+
+```
+class Solution {
+public:
+    vector<int> findDiagonalOrder(vector<vector<int>>& mat) {
+        // x + y = k.  k = [0, 2n-1]
+        vector<int> ans;
+        int m = mat.size();
+        int n = mat[0].size(); 
+        for (int k = 0; k < max(m, n) * 2 - 1; k++) {
+            // 向上遍历
+            if (k % 2 == 0) {
+                for (int row = min(k, m - 1); row >= 0 && (k - row) < n; row--) {
+                    //cout << row << k - row << endl;
+                    ans.push_back(mat[row][k - row]);
+                }
+            }
+            else {
+                for (int col = min(k, n - 1); col >= 0 && (k - col) < m ; col--) {
+                    //cout << k - col << col << endl;
+                    ans.push_back(mat[k - col][col]);
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
+## 旋转问题
+#### 48.旋转图像
+> 给定一个 n × n 的二维矩阵 matrix 表示一个图像。请你将图像顺时针旋转 90 度。
+
+- 思路：
+  - 先转置矩阵，
+  - 然后再**进行同行翻转即可得到旋转结果** 
+  - 时间复杂度O(n^2)
+
+```
+class Solution {
+public:
+    void rotate(vector<vector<int>>& matrix) {
+        int n = matrix.size();
+        // 矩阵转置
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < i; j++) {
+                swap(matrix[i][j], matrix[j][i]);
+            }
+        }
+        for (int i = 0; i < n; i++) {
+            reverse(matrix[i].begin(), matrix[i].end());
+        }
+    }
+};
+```
+
+```
+class Solution {
+public:
+    void rotate(vector<vector<int>>& matrix) {
+        int n=matrix.size();
+        for(int i=0;i<n;i++)
+        {
+            for(int j=0;j<i;j++){
+                int tmp=matrix[i][j];
+                matrix[i][j]=matrix[j][i];
+                matrix[j][i]=tmp;
+            }
+        }
+        for(int i=0;i<n;i++)
+        {
+            for(int j=0;j<n/2;j++){
+                int tmp=matrix[i][j];
+                matrix[i][j]=matrix[i][n-j-1];
+                matrix[i][n-j-1]=tmp;
+            }
+        }
+        
+    }
+};
+```
+### 189. 旋转数组
+> 给定一个数组，将数组中的元素向右移动 k 个位置，其中 k 是非负数
+```
+输入: nums = [1,2,3,4,5,6,7], k = 3
+输出: [5,6,7,1,2,3,4]
+解释:
+向右旋转 1 步: [7,1,2,3,4,5,6]
+向右旋转 2 步: [6,7,1,2,3,4,5]
+向右旋转 3 步: [5,6,7,1,2,3,4
+```
+- 方法1： 暴力循环
+- 方法2: 环形平移
+- 方法3: **三次反转数组** 
 ```
 class Solution {
 public:
@@ -37,38 +272,7 @@ public:
         }
 };
 ```
-
-【暴力解法】
-```
-class Solution {
-public:
-    void rotate(vector<int>& nums, int k) {
-        k%=(nums.size());
-        //int tmp=0;
-        ///int start=0;
-        int tmp=0;
-        for(int i=0;i<k;i++)
-        {
-            for(int j=0;j<nums.size()-1;j++){
-                
-                if(j==0){
-                    tmp=nums[j+1];
-                nums[j+1]=nums[j];
-                }
-                else{
-                    int t=nums[j+1];
-                    nums[j+1]=tmp;
-                    tmp=t;
-
-                }
-                }
-                nums[0]=tmp;
-        }
-        }
-};
-```
-
-####【反转数组】
+- **反转数组**：先反转整个数组，再反转前k个数字，再反转最后的n-k个数字。
 ```
 class Solution {
 public:
@@ -89,8 +293,18 @@ public:
         }
 };
 ```
+```
+class Solution {
+public:
+    void rotate(vector<int>& nums, int k) {
+        k %= nums.size();
+        reverse(nums.begin(), nums.end());
+        reverse(nums.begin() + k, nums.end());
+        reverse(nums.begin(), nums.begin() + k);
+    }
+};
+```
 
-先反转整个数组，再反转前k个数字，再反转最后的n-k个数字。
 【利用额外空间进行数组记录】
 ```
 class Solution {
@@ -110,35 +324,14 @@ public:
 };
 ```
 
-####【数组中存在重复元素】
-
-
-利用map等哈希结构进行搜索
-```
-class Solution {
-public:
-    bool containsDuplicate(vector<int>& nums) {
-        unordered_map<int,int> keys;
-        for(int i=0;i<nums.size();i++){
-            keys[nums[i]]++;
-            if(keys[nums[i]]>1)
-                return true;
-            
-        }
-        return false;
-    }
-};
-```
-直接调用sort函数进行
-
-#### 只出现一次的数字
+## 位运算技巧
+### 136. 只出现一次的数字
 > 给定一个非空整数数组，除了**某个元素只出现一次以外**，其余每个元素均出现两次。找出那个只出现了一次的元素
-https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x21ib6/
 
-要求是线性时间、不占额外内存；
+- 要求是线性时间、不占额外内存；
 
-线性时间就可以想到利用排序，减少遍历复杂度；
-如果没额外内存限制的话，就可以利用哈希表或者集合，记录键值。
+- 线性时间就可以想到利用排序，减少遍历复杂度；
+- 如果没额外内存限制的话，就可以**利用哈希表或者集合**，记录键值。
 
 ```
 class Solution {
@@ -164,7 +357,7 @@ public:
 };
 ```
 另外一种方法：【**位运算**】
-思路比较绝，后续可以借鉴一下：使用两元素的异或XOR操作，整个数组的XOR操作即可得到没有重复的数字；
+- **使用两元素的异或XOR操作**，整个数组的XOR操作即可得到没有重复的数字；
 ```
 class Solution {
 public:
@@ -180,7 +373,7 @@ public:
 };
 ```
 ### 137. 只出现过一次的数字
-- 给你一个整数数组 nums ，除某个元素仅出现 一次 外，其余每个元素都恰出现三次
+- 给你一个整数数组 nums ，除某个元素仅出现一次外，**其余每个元素都恰出现三次**
 ```
 class Solution {
 public:
@@ -198,7 +391,7 @@ public:
 
 ### 260. 只出现过一次的数字 II 
 
-> 给定一个整数数组 nums，其中恰好有两个元素只出现一次，**其余所有元素均出现两次**。 找出只出现一次的那两个元素。你可以按 任意顺序 返回答案。
+> 给定一个整数数组 nums，其中**恰好有两个元素只出现一次**，**其余所有元素均出现两次**。 找出只出现一次的那两个元素。你可以按 任意顺序 返回答案。
 - 基础做法：哈希表构建，然后直接搜索即可
 - 进阶做法，在上一题的基础上，使用异或运算
   - 考虑异或操作的性质：**对于两个操作数的每一位，相同结果为 00，不同结果为 11**。那么在计算过程中，成对出现的数字的所有位会两两抵消为 00，最终得到的结果就是那个出现了一次的数字。
@@ -240,7 +433,188 @@ public:
 };
 ```
 
-#### 350. 两个数组的交集2
+## 双指针技巧
+### 75. 颜色分类 [Medium]
+- 三种颜色 0 1 2 ， 要实现对这些颜色的原地排序 从小到大排列
+
+
+- 双指针法： **left指针控制0， right指针控制2，进行交换，只需要遍历一次即可完成排序**
+  - 遇到0，与left进行交换，即往左甩
+  - 遇到2，则与right进行交换，往右甩
+  - `left < right`； 
+    - 技巧点： 当进行right交换时，交换完成后要回退一步，保证避免遗漏对元素的处理，*可能将2又换到当前位置*
+- 时间复杂度： `O(N)`
+
+- 关键点： **双指针** **一次遍历**
+
+```
+class Solution {
+public:
+    void sortColors(vector<int>& nums) {
+        int left = 0;
+        int right = nums.size() - 1;
+        for (int i = 0; i <= right; i++){
+            if (nums[i] == 0) {
+                swap(nums[i], nums[left]);
+                left++;
+            }
+            if (nums[i] == 2) {
+                swap(nums[i], nums[right]);
+                right--;
+                i--;// 解题关键
+            }
+        }
+    }
+};
+```
+
+### 剑指21. 调整数组顺序使奇数位于偶数前面
+> 使得所有奇数位于数组的前半部分，所有偶数位于数组的后半部分。
+
+- 跟LC75题思路相似，原地移动即可，设置left指针，将所有奇数向left指针位置交换即可
+- 时间复杂度 O(N)
+```
+class Solution {
+public:
+    vector<int> exchange(vector<int>& nums) {
+        int left = 0;
+        for (int i = 0; i < nums.size(); i++) {
+            if (nums[i] % 2 ) {
+                swap(nums[left], nums[i]);
+                left++;
+            }
+        }
+        return nums;
+    }
+};
+```
+
+### 283. 移动零
+> 给定一个数组 nums，编写一个函数将所有 0 移动到数组的末尾，同时保持非零元素的相对顺序。
+
+```
+输入: [0,1,0,3,12]
+输出: [1,3,12,0,0]
+```
+- 这并非一道排序题目, 仍然是数组双指针的应用
+- 当当前值非0时，即往左甩，并移动left指针，否则正常移动right指针
+- 与剑指21等题目十分相似
+
+
+```
+class Solution {
+public:
+    void moveZeroes(vector<int>& nums) {
+        int left = 0;
+        int right = 0;
+        while (right < nums.size()) {
+            if (nums[right]) {
+                swap(nums[left], nums[right]);
+                left++;
+            }
+            right++;
+        }
+    }
+};
+```
+
+### 15. 3Sum [Medium]
+- 从无序数组中找出三个非重复元素和等于目标值
+- TwoSum的升级
+- 可以通过多次TwoSum查找来实现3Sum的计算
+    - 为了避免重复，需要在遍历时跳过重复区域
+    - 外层循环和内层循环都需要进行重复区域的跳过
+- 时间复杂度 `O(N^2)` 空间复杂度 O(logN) 排序所需
+```
+class Solution {
+public:
+    vector<vector<int>> ans;
+    void twoSum(vector<int>& nums, int target, int index) {
+        int left = index + 1;
+        int right = nums.size() - 1;
+        while(left < right) {
+            if (nums[left] + nums[right] == target) {
+                if (left != index && right != index) {
+                    ans.push_back({nums[index], nums[left], nums[right]});
+                    //cout << nums[index] <<" " <<nums[left] << " "<< nums[right] << endl;
+                }
+                int cur = nums[left];
+                while(left < nums.size() && nums[left]==cur) {
+                    left++;
+                }
+                //cout << "move:" << left << " " << nums[left]<< endl;
+                int curr = nums[right];
+                while(right >= 0 && nums[right]==curr) {
+                    right--;
+                }
+                //cout << "right:" << right << " " << nums[right]<< endl;
+                continue;
+                //left++;
+            }
+            else if(nums[left] + nums[right] < target) {
+                left++;
+            }
+            else {
+                right--;
+            }
+        }
+    }
+    vector<vector<int>> threeSum(vector<int>& nums) {
+        if (nums.size() < 3) {
+            return ans;
+        }
+        sort(nums.begin(), nums.end()); //排序
+        int i = 0;
+        while (i < nums.size()) {
+            if (nums[i] > 0)
+                break;
+            twoSum(nums, -nums[i], i);
+            int cur = nums[i];
+            while(i < nums.size() && nums[i]==cur) {
+                    i++;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+### 88. 合并两个有序数组
+- 给定两个有序数组a,b， 其中a数组空间比较大，可以容纳a+b两个数组
+- 思路1:  合并后排序
+- 思路2： 使用双指针，借助额外空间存储a，双指针合并
+- 思路3:  **逆向双指针，从后往前遍历**，将最大值往a的尾部填充
+    - 最后将未合并的部分再添加到a中即可
+```
+class Solution {
+public:
+    void merge(vector<int>& nums1, int m, vector<int>& nums2, int n) {
+        // 
+        int right = nums1.size() - 1;
+        int p1 = m - 1;
+        int p2 = n - 1;
+        while (p1 >= 0 && p2 >= 0) {
+            if (nums1[p1] > nums2[p2]) {
+                nums1[right] = nums1[p1];
+                right--;
+                p1--;
+            } else {
+               nums1[right] = nums2[p2];
+                right--;
+                p2--; 
+            }
+        }
+        // 处理剩余部分
+        while(p2 >= 0) {
+            nums1[right] = nums2[p2];
+            right--;
+            p2--; 
+        }
+    }
+};
+```
+
+### 350. 两个数组的交集2
 https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2y0c2/
 
 允许有重复的数字，计算两个数组所有重复的数字(数字本身就是可以重复)
@@ -309,87 +683,9 @@ public:
         }
 };
 ```
-### 66.加一
-https://leetcode-cn.com/leetbook/read/top-interview-questions-easy/x2cv1c/
 
-- 数组遍历+1；对于临界情况进行额外考虑，即头部需要插入新元素
-    复杂度分析： 时间复杂度O(m) 插入复杂度O(1)(vector insert)
-```
-class Solution {
-public:
-    <!-- void reverse(vector<int>& digits){
-        int start=0;
-        int end=digits.size()-1;
-        while(start<end){
-            int tmp=digits[start];
-            digits[start]=digits[end];
-            digits[end]=tmp;
-            start++;
-            end--;
-        }
-    } -->
-    vector<int> plusOne(vector<int>& digits) {
-        bool next=false;
-        for(int i=digits.size()-1;i>=0;i--){
-            digits[i]++;
-            if (digits[i]==10){
-                digits[i]=0;
-                next=true;
-            }else{
-                next=false;
-                break;
-            }
-        }
-        if(next){
-            digits.insert(digits.begin(),1);
-        }
-        return digits;
-    }
-};
-```
-
-### 283.移动零
-将数组中所有的0移动至数组末尾，并保持0的相对位置，不能进行数组copy
-
-- 数组遍历交换(有冒泡排序内味儿了)： 时间复杂度 O(n)
-```
-class Solution {
-public:
-    void moveZeroes(vector<int>& nums) {
-        for(int i=0;i<nums.size()-1;i++){
-            for(int j=i;j<nums.size();j++){
-                if(nums[i]==0 && nums[j]!=0){
-                    nums[i]=nums[j];
-                    nums[j]=0;
-                    break;
-                }
-            }
-        }
-    }
-};
-```
-
-- 双指针交换，跟上面的思想本质是一样 O(n)
-```
-class Solution {
-public:
-    void moveZeroes(vector<int>& nums) {
-       int left=0,right=0;
-       int len=nums.size();
-       while(right<len){
-           if(nums[right]){
-               int t=nums[right];
-               nums[right]=0;
-               nums[left]=t;
-               left++;
-           }
-           right++;
-       }
-    }
-};
-```
-
-#### 1. 两数之和
+## 哈希表技巧
+### 1. 两数之和
 给定数组和目标，找出数组两元素之和为target的元素索引
 
 - 暴力搜索
@@ -415,13 +711,15 @@ public:
 };
 ```
 
-#### 36. 有效的数独
+### 36. 有效的数独
+```
 一个简单的解决方案是遍历该 9 x 9 数独 三 次，以确保：
 
 行中没有重复的数字。
 列中没有重复的数字。
 3 x 3 子数独内没有重复的数字。
 实际上，所有这一切都可以在一次迭代中完成。
+```
 
 - 通过哈希表一次记录行、列、宫三种情况的数据分布
 
@@ -453,133 +751,194 @@ public:
 };
 ```
 
-#### 48.旋转图像
-- 转置矩阵，然后再进行同行翻转即可得到旋转结果 时间复杂度O(n^2)
-- 
+### 380. 常数时间插入/删除/随机取数组元素 [Medium]
+- 哈希表+动态数组实现
+- 删除： 将尾部元素与当前要删除的元素进行交互，然后再删除尾部数组，实现常量级的删除操作
+  
 ```
-class Solution {
+class RandomizedSet {
 public:
-    void rotate(vector<vector<int>>& matrix) {
-        int n=matrix.size();
-        for(int i=0;i<n;i++)
-        {
-            for(int j=0;j<i;j++){
-                int tmp=matrix[i][j];
-                matrix[i][j]=matrix[j][i];
-                matrix[j][i]=tmp;
-            }
+    unordered_map<int, int> indexs;
+    vector<int> ans;
+
+    /** Initialize your data structure here. */
+    RandomizedSet() {
+
+    }
+    
+    /** Inserts a value to the set. Returns true if the set did not already contain the specified element. */
+    bool insert(int val) {
+        //cout << "insert" << endl;
+        if (indexs.count(val)) {
+            return false;
         }
-        for(int i=0;i<n;i++)
-        {
-            for(int j=0;j<n/2;j++){
-                int tmp=matrix[i][j];
-                matrix[i][j]=matrix[i][n-j-1];
-                matrix[i][n-j-1]=tmp;
+        ans.push_back(val);
+        indexs[val] = ans.size() - 1;
+        return true;
+
+    }
+    
+    /** Removes a value from the set. Returns true if the set contained the specified element. */
+    bool remove(int val) {
+        //cout << "remove" << endl;
+        if (indexs.count(val)) {
+           // cout << "remove2" << endl;
+            
+            
+            int pos = indexs[val];
+            indexs.erase(val);
+            if (pos == ans.size() - 1){
+                ans.pop_back();
+                return true;
             }
+            ans[pos] = ans.back();
+            indexs[ans.back()] = pos;
+            ans.pop_back();
+            
+            return true;
         }
-        
+        return false;
+    }
+    
+    /** Get a random element from the set. */
+    int getRandom() {
+        //cout << "Random" << endl;
+        return ans[rand() % ans.size()];
     }
 };
 ```
 
-### 88. 合并两个有序数组
-- 给定两个有序数组a,b， 其中a数组空间比较大，可以容纳a+b两个数组
-- 思路1:  合并后排序
-- 思路2： 使用双指针，借助额外空间存储a，双指针合并
-- 思路3:  逆向双指针，从后往前遍历，将最大值往a的尾部填充
-    - 最后将未合并的部分再添加到a中即可
+
+## 搜索问题
+
+
+### 240. 搜索二维矩阵 II [Medium]
+> 每行的元素从左到右升序排列。 每列的元素从上到下升序排列。
+- 二分查找法：
+  - 在对角线开始向下和向右的搜索
+
 ```
 class Solution {
 public:
-    void merge(vector<int>& nums1, int m, vector<int>& nums2, int n) {
-        // 
-        int right = nums1.size() - 1;
-        int p1 = m - 1;
-        int p2 = n - 1;
-        while (p1 >= 0 && p2 >= 0) {
-            if (nums1[p1] > nums2[p2]) {
-                nums1[right] = nums1[p1];
-                right--;
-                p1--;
-            } else {
-               nums1[right] = nums2[p2];
-                right--;
-                p2--; 
+    int rows = 0;
+    int cols = 0;
+    bool binarySearch(vector<vector<int>>& matrix, int target, int row) {
+        //cout << "binarySearch" << endl;
+        int left = row;
+        int right = rows - 1;
+        int col = row;
+        while (left <= right) {
+            //cout <<"l : " << left << " r :" << right << endl; 
+            int mid = left + (right - left)/2;
+            if (matrix[mid][col] == target) 
+                return true;
+            else if (matrix[mid][col] < target) {
+                left = mid + 1;
+            }
+            else if (matrix[mid][col] > target) {
+                right = mid - 1;
             }
         }
-        // 处理剩余部分
-        while(p2 >= 0) {
-            nums1[right] = nums2[p2];
-            right--;
-            p2--; 
+        int low = row;
+        int high = cols - 1;
+        while (low <= high) {
+            //cout <<"low : " << low << " high :" << high << endl;
+            int mid = low + (high - low)/2;
+            if (matrix[row][mid] == target) 
+                return true;
+            else if (matrix[row][mid] < target) {
+                low = mid + 1;
+            }
+            else if (matrix[row][mid] > target) {
+                 high = mid - 1;
+            }
         }
+        return false;
+    }
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        rows = matrix.size();
+        cols = matrix[0].size();
+        for (int i = 0; i < min(rows,cols); i ++) {
+            if (binarySearch(matrix, target, i))
+                return true;
+        }
+        return false;
+    }
+};
+```
+- **进阶做法**： 由于行和列都是有序的，可以将这个矩阵看作是一个搜索二叉树，
+  - **将左下角元素作为根节点，向上都是小于根节点的元素，向右都是大于根节点的元素**
+- 时间复杂度：`O(m+n)`
+```
+class Solution {
+public:
+
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        int row = matrix.size() - 1;
+        int col = 0;
+        while(row >=0 && col < matrix[0].size()) {
+            if (matrix[row][col] == target) 
+                return true;
+            else if (matrix[row][col] > target) {
+                row--; // 向小的方向移动
+            }
+            else if (matrix[row][col] < target) {
+                col++;
+            }
+        }
+        return false;
     }
 };
 ```
 
-### 补充题：最多覆盖点问题 [百度/美团]
-
-> 数轴上从左到右有n个点a[0],a[1]…,a[n-1]，给定一根长度为L的绳子，求绳子最多能覆盖其中的几个点。要求算法复杂度为o(n)， 空间复杂度为O(1)
-
-- 双指针法，滑窗进行
-- 当**当前窗口长度大于最大长度时**，更新结果 `right - left`， 并移动左指针； 否则移动右指针
-
-```
-长度： 3 ； 6个数字
-3 6
-1 2 5 6 8 9
-```
-
-```
-int maxPoints(vector<int>& nums, int len) {
-    int ans = 0;
-    int left = 0;
-    int right = 0;
-    while (right < nums.size()) {
-        if ( (nums[right] - nums[left]) > len) {
-            ans = max(ans, right - left);
-            left++;
-        }
-        else {
-            right++;
-        }
-        //cout << "l : " << left << " r :" << right << " " << ans << endl;
-    }
-    cout << ans << endl;
-    return ans;
-}
-```
-
-### 498. 对角线遍历 
-> 给定一个含有 M x N 个元素的矩阵（M 行，N 列），请以对角线遍历的顺序返回这个矩阵中的所有元素
-
-- 与螺旋矩阵遍历有相似之处，都在考察对数组和矩阵的基本操作逻辑
-- 对角线遍历方式： **即保持： （x+y = k） 控制x 和 y 不超过合法范围即可**
-
+###  74. 搜索二维矩阵 I [Medium]
+> 每行中的整数从左到右按升序排列。每行的第一个整数大于前一行的最后一个整数
+- 二分查找的利用
+  - 先搜第一列，找出小于目标值的第一行，然后再在行内进行二分查找
+  - 时间复杂度： `O(logm + logn)`
 ```
 class Solution {
 public:
-    vector<int> findDiagonalOrder(vector<vector<int>>& mat) {
-        // x + y = k.  k = [0, 2n-1]
-        vector<int> ans;
-        int m = mat.size();
-        int n = mat[0].size(); 
-        for (int k = 0; k < max(m, n) * 2 - 1; k++) {
-            // 向上遍历
-            if (k % 2 == 0) {
-                for (int row = min(k, m - 1); row >= 0 && (k - row) < n; row--) {
-                    //cout << row << k - row << endl;
-                    ans.push_back(mat[row][k - row]);
-                }
+    bool searchMatrix(vector<vector<int>>& matrix, int target) {
+        int low = 0;
+        int row = 0;
+        int high = matrix.size() - 1;
+        while(low <= high) {
+            int mid = low + (high - low) / 2;
+            if (matrix[mid][0] ==  target) 
+                return true;
+            else if (matrix[mid][0] < target) {
+                row = mid;
+                low = mid + 1;
             }
             else {
-                for (int col = min(k, n - 1); col >= 0 && (k - col) < m ; col--) {
-                    //cout << k - col << col << endl;
-                    ans.push_back(mat[k - col][col]);
-                }
+                high = mid - 1;
             }
         }
-        return ans;
+        //cout << row << endl;
+        if (matrix[row][0] > target || matrix[row].back() < target) 
+            return false;
+        int left = 0;
+        int right = matrix[row].size() - 1;
+        while (left <= right) {
+            int mid = left + (right - left) / 2;
+            if (matrix[row][mid] ==  target) 
+                return true;
+            else if (matrix[row][mid] < target) {
+                left = mid + 1;
+            }
+            else {
+                right = mid - 1;
+            }
+        }
+        return false;
     }
 };
 ```
+
+
+
+
+
+
+
